force-app/main/default/objects/RC_student_test__c/fields/assessment__c.field-meta.xml
<CustomField>
    <fullName>assessment__c</fullName>
    <label>assessment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>