force-app/main/default/objects/RC_student_test__c/fields/has_cleared_cutoff__c.field-meta.xml
<CustomField>
    <fullName>has_cleared_cutoff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The student has cleared the cutoff for test round.</description>
    <label>hasClearedCutoff</label>
    <type>Checkbox</type>
</CustomField>