force-app/main/default/objects/RC_student_test__c/fields/isLoggedIn__c.field-meta.xml
<CustomField>
    <fullName>isLoggedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if the candidate is logged in or not</description>
    <label>isLoggedIn</label>
    <type>Checkbox</type>
</CustomField>