force-app/main/default/objects/RC_student_test__c/fields/round_four_cleared__c.field-meta.xml
<CustomField>
    <fullName>round_four_cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>round_four_cleared</label>
    <type>Checkbox</type>
</CustomField>