force-app/main/default/objects/RC_student_test__c/fields/round_three_cleared__c.field-meta.xml
<CustomField>
    <fullName>round_three_cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Round Three Cleared</label>
    <type>Checkbox</type>
</CustomField>