force-app/main/default/objects/RC_student_test__c/fields/RoundFourStatus__c.field-meta.xml
<CustomField>
    <fullName>RoundFourStatus__c</fullName>
    <label>RoundFourStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>