force-app/main/default/objects/RC_student_test__c/fields/RoundOneStatus__c.field-meta.xml
<CustomField>
    <fullName>RoundOneStatus__c</fullName>
    <label>Round One Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>