force-app/main/default/objects/RC_student_test__c/fields/RoundThreeStatus__c.field-meta.xml
<CustomField>
    <fullName>RoundThreeStatus__c</fullName>
    <label>Round Three Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>