force-app/main/default/objects/RC_student_test__c/fields/RoundTwoStatus__c.field-meta.xml
<CustomField>
    <fullName>RoundTwoStatus__c</fullName>
    <label>Round Two Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>