force-app/main/default/objects/RC_student_test__c/fields/StudentQuestions_JSON__c.field-meta.xml
<CustomField>
    <fullName>StudentQuestions_JSON__c</fullName>
    <label>StudentQuestions_JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>