force-app/main/default/objects/RC_student_test__c/fields/studentTestLog__c.field-meta.xml
<CustomField>
    <fullName>studentTestLog__c</fullName>
    <description>Contains all the log data of a student while attempting a test.</description>
    <label>studentTestLog</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>