force-app/main/default/objects/RC_student_test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>student_id__c</columns>
    <columns>event_id__c</columns>
    <columns>RoundOneStatus__c</columns>
    <columns>RoundThreeStatus__c</columns>
    <columns>RoundTwoStatus__c</columns>
    <columns>student_marks_scored__c</columns>
    <columns>round_one_cleared__c</columns>
    <columns>isApproved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>